--- a/sass/susy/language/susy/_context.scss
+++ b/sass/susy/language/susy/_context.scss
@@ -1,4 +1,3 @@
-@use "sass:map";
 // Context Syntax
 // ==============
 
@@ -28,10 +27,10 @@
   $inspect  : $context;
   $context  : parse-span($context);
   $old      : susy-get(columns);
-  $susy     : map.merge($susy, (columns: nested($context))) !global;
+  $susy     : map-merge($susy, (columns: nested($context))) !global;
 
   @include susy-inspect(nested, $inspect);
   @content;
 
-  $susy     : map.merge($susy, (columns: $old)) !global;
+  $susy     : map-merge($susy, (columns: $old)) !global;
 }
