--- a/sass/susy/language/susy/_gallery.scss
+++ b/sass/susy/language/susy/_gallery.scss
@@ -1,4 +1,3 @@
-@use "sass:map";
 // Gallery Syntax
 // ==============
 
@@ -7,15 +6,13 @@
 // Create an isolated gallery
 // - $span        : <span>
 // - [$selector]  : child | of-type
-@use "sass:math";
-
 @mixin gallery(
   $span,
   $selector: child
 ) {
   $inspect    : $span;
   $span       : parse-span($span);
-  $span       : map.merge($span, (location: 1));
+  $span       : map-merge($span, (location: 1));
 
   $n            : susy-get(span, $span);
   $columns      : susy-get(columns, $span);
@@ -24,7 +21,7 @@
 
   $inside       : is-inside($span);
   $from         : from($flow);
-  $line         : math.floor(math.div($context, $n));
+  $line         : floor($context / $n);
   $symmetrical  : is-symmetrical($columns);
 
   $output: (
@@ -39,14 +36,14 @@
 
   @if $inside {
     $gutters: get-gutters($span);
-    $output: map.merge($output, (
-      padding-before: map.get($gutters, before),
-      padding-after: map.get($gutters, after),
+    $output: map-merge($output, (
+      padding-before: map-get($gutters, before),
+      padding-after: map-get($gutters, after),
     ));
   }
 
   @if $symmetrical {
-    $output: map.merge($output, (width: get-span-width($span)));
+    $output: map-merge($output, (width: get-span-width($span)));
   }
 
   $box          : susy-get(box-sizing, $span);
@@ -91,7 +88,7 @@
       // Individual Location Increment
       $location: get-location($span) + $n;
       $location: if($location > $context, 1, $location);
-      $span: map.merge($span, (location: $location));
+      $span: map-merge($span, (location: $location));
     }
   }
 }
