--- a/sass/susy/language/susy/_bleed.scss
+++ b/sass/susy/language/susy/_bleed.scss
@@ -1,8 +1,3 @@
-@use "sass:list";
-@use "sass:map";
-@use "sass:math";
-@use "sass:meta";
-@use "sass:string";
 // Bleed Syntax
 // ============
 
@@ -17,7 +12,7 @@
   $output   : get-bleed($bleed);
 
   @if susy-get(global-box-sizing) != content-box {
-    $output: map.merge((box-sizing: content-box), $output);
+    $output: map-merge((box-sizing: content-box), $output);
   }
 
   @include susy-inspect(bleed, $inspect);
@@ -35,12 +30,12 @@
   $bleed  : parse-span($bleed);
   $trbl   : susy-get(span, $bleed);
 
-  @if list.length($trbl) == 1 {
-    $bleed: map.merge($bleed, (span: 0 list.nth($trbl, 1)));
-  } @else if list.length($trbl) == 2 {
-    $bleed: map.merge($bleed, (span: 0 list.nth($trbl, 2) 0 list.nth($trbl, 1)));
+  @if length($trbl) == 1 {
+    $bleed: map-merge($bleed, (span: 0 nth($trbl, 1)));
+  } @else if length($trbl) == 2 {
+    $bleed: map-merge($bleed, (span: 0 nth($trbl, 2) 0 nth($trbl, 1)));
   } @else {
-    @warn 'bleed-x only takes 2 lengths, but #{list.length($trbl)} were passed.';
+    @warn 'bleed-x only takes 2 lengths, but #{length($trbl)} were passed.';
   }
 
   @include bleed($bleed);
@@ -52,17 +47,17 @@
 // Shortcut for vertical bleed.
 // - $bleed  : <span>
 @mixin bleed-y(
-  $bleed: if(meta.function-exists(rhythm), rhythm(1), 1em)
+  $bleed: if(function-exists(rhythm), rhythm(1), 1em)
 ) {
   $bleed  : parse-span($bleed);
   $trbl   : susy-get(span, $bleed);
 
-  @if list.length($trbl) == 1 {
-    $bleed: map.merge($bleed, (span: list.nth($trbl, 1) 0));
-  } @else if list.length($trbl) == 2 {
-    $bleed: map.merge($bleed, (span: list.nth($trbl, 1) 0 list.nth($trbl, 2) 0));
+  @if length($trbl) == 1 {
+    $bleed: map-merge($bleed, (span: nth($trbl, 1) 0));
+  } @else if length($trbl) == 2 {
+    $bleed: map-merge($bleed, (span: nth($trbl, 1) 0 nth($trbl, 2) 0));
   } @else {
-    @warn 'bleed-y only takes 2 lengths, but #{list.length($trbl)} were passed.';
+    @warn 'bleed-y only takes 2 lengths, but #{length($trbl)} were passed.';
   }
 
   @include bleed($bleed);
@@ -76,20 +71,20 @@
 @function get-bleed(
   $bleed
 ) {
-  $bleed    : map.merge((spread: wide), parse-span($bleed));
+  $bleed    : map-merge((spread: wide), parse-span($bleed));
   $trbl     : susy-get(span, $bleed);
   $short    : null;
   $output   : ();
 
-  @for $i from 1 through list.length($trbl) {
-    $this: list.nth($trbl, $i);
+  @for $i from 1 through length($trbl) {
+    $this: nth($trbl, $i);
     $new: ();
     $margin: null;
     $padding: null;
     $padding-x: null;
 
     @if $this > 0 {
-      $this: map.merge($bleed, (span: $this));
+      $this: map-merge($bleed, (span: $this));
       $margin: span($this);
       $padding: $margin;
       $padding-x: $padding;
@@ -100,7 +95,7 @@
 
       @if is-inside($this) {
         $gutter: gutter($this);
-        $join: if($gutter and math.compatible($padding, $gutter), true, false);
+        $join: if($gutter and comparable($padding, $gutter), true, false);
         $padding-x: if($join and $padding > 0, $padding + $gutter, $padding);
       }
     }
@@ -135,11 +130,11 @@
       );
     }
 
-    $output: map.merge($output, $new);
+    $output: map-merge($output, $new);
   }
 
   @each $prop, $value in $output {
-    $output: if($value == 0, map.merge($output, ($prop: null)), $output);
+    $output: if($value == 0, map-merge($output, ($prop: null)), $output);
   }
 
   @return bleed-shorthand($output);
@@ -157,10 +152,10 @@
   $return: ();
 
   @each $key, $value in $bleed {
-    @if string.index($key, margin) {
-      $margin: map.merge($margin, ($key: $value));
-    } @else if string.index($key, padding) > 0 {
-      $padding: map.merge($padding, ($key: $value));
+    @if str-index($key, margin) {
+      $margin: map-merge($margin, ($key: $value));
+    } @else if str-index($key, padding) > 0 {
+      $padding: map-merge($padding, ($key: $value));
     }
   }
 
@@ -170,14 +165,14 @@
   );
 
   @each $name, $map in $props {
-    $four: if(list.length(map.keys($map)) == 4, true, false);
-    $null: if(list.index(map.values($map), null), true, false);
+    $four: if(length(map-keys($map)) == 4, true, false);
+    $null: if(index(map-values($map), null), true, false);
 
     @if $four and not($null) {
-      $top: map.get($map, '#{$name}-top');
-      $right: map.get($map, '#{$name}-right');
-      $bottom: map.get($map, '#{$name}-bottom');
-      $left: map.get($map, '#{$name}-left');
+      $top: map-get($map, '#{$name}-top');
+      $right: map-get($map, '#{$name}-right');
+      $bottom: map-get($map, '#{$name}-bottom');
+      $left: map-get($map, '#{$name}-left');
 
       $tb: if($top == $bottom, $top, null);
       $rl: if($right == $left, $right, null);
@@ -195,9 +190,9 @@
         }
       }
 
-      $return: map.merge($return, ($name: $new));
+      $return: map-merge($return, ($name: $new));
     } @else {
-      $return: map.merge($return, $map);
+      $return: map-merge($return, $map);
     }
   }
 
