--- a/sass/susy/language/susy/_gutters.scss
+++ b/sass/susy/language/susy/_gutters.scss
@@ -1,5 +1,3 @@
-@use "sass:list";
-@use "sass:map";
 // Gutter Syntax
 // =============
 
@@ -8,8 +6,6 @@
 // -------
 // Set gutters on an element.
 // - [$span]   : <settings>
-@use "sass:math";
-
 @mixin gutters(
   $span: $susy
 ) {
@@ -18,8 +14,8 @@
   $_gutters : get-gutters($span);
 
   $_output: (
-    before: map.get($_gutters, before),
-    after: map.get($_gutters, after),
+    before: map-get($_gutters, before),
+    after: map-get($_gutters, after),
     flow: susy-get(flow, $span),
   );
 
@@ -49,7 +45,7 @@
   $span: parse-gutters($span);
 
   $_gutters: get-gutters($span);
-  $_gutters: map.get($_gutters, before) or map.get($_gutters, after);
+  $_gutters: map-get($_gutters, before) or map-get($_gutters, after);
 
   @return $_gutters;
 }
@@ -81,7 +77,7 @@
     } @else {
       $_columns : susy-get(columns, $context);
       $_spread  : if(is-split($context), wide, susy-get(spread, $context));
-      $_gutter  : math.percentage(math.div($_gutters, susy-sum($_columns, $_gutters, $_spread)));
+      $_gutter  : percentage($_gutters / susy-sum($_columns, $_gutters, $_spread));
     }
   }
 
@@ -106,10 +102,10 @@
   $_return            : (before: null, after: null);
 
   @if is-split($context) and $_gutter {
-    $_gutter: $_gutter * 0.5;
-    $_return: map.merge($_return, (before: $_gutter, after: $_gutter));
+    $_gutter: $_gutter / 2;
+    $_return: map-merge($_return, (before: $_gutter, after: $_gutter));
   } @else {
-    $_return: map.merge($_return, ($_gutter-position: $_gutter));
+    $_return: map-merge($_return, ($_gutter-position: $_gutter));
   }
 
   @return $_return;
@@ -126,7 +122,7 @@
   $_inside: inside inside-static;
   $_gutter-position: susy-get(gutter-position, $context);
 
-  @return if(list.index($_inside, $_gutter-position), true, false);
+  @return if(index($_inside, $_gutter-position), true, false);
 }
 
 
@@ -140,7 +136,7 @@
   $_split: split inside inside-static;
   $_gutter-position: susy-get(gutter-position, $context);
 
-  @return if(list.index($_split, $_gutter-position), true, false);
+  @return if(index($_split, $_gutter-position), true, false);
 }
 
 
