--- a/sass/susy/language/susy/_isolate.scss
+++ b/sass/susy/language/susy/_isolate.scss
@@ -1,6 +1,3 @@
-@use "sass:map";
-@use "sass:math";
-@use "sass:meta";
 // Isolation Syntax
 // ================
 
@@ -39,7 +36,7 @@
       span: null,
       location: $isolation,
     );
-    $isolate: map.merge($isolate, $new);
+    $isolate: map-merge($isolate, $new);
   }
 
   @return get-isolation($isolate);
@@ -57,12 +54,12 @@
   $columns    : susy-get(columns, $input);
   $width      : null;
 
-  @if meta.type-of($location) == number and not(math.is-unitless($location)) {
+  @if type-of($location) == number and not(unitless($location)) {
     $width: $location;
   } @else if $location {
     $push: $location - 1;
     @if $push > 0 {
-      $push: map.merge($input, (
+      $push: map-merge($input, (
         span: $push,
         location: 1,
         spread: wide,
