--- a/sass/susy/language/susy/_margins.scss
+++ b/sass/susy/language/susy/_margins.scss
@@ -1,5 +1,3 @@
-@use "sass:list";
-@use "sass:map";
 // Margin Syntax
 // =============
 
@@ -11,7 +9,7 @@
   $span
 ) {
   $inspect: $span;
-  $span   : map.merge((spread: wide), parse-span($span));
+  $span   : map-merge((spread: wide), parse-span($span));
   $flow   : susy-get(flow, $span);
   $split  : if(susy-get(gutter-position, $span) == split, true, false);
   $gutter : gutter($span);
@@ -30,7 +28,7 @@
   $span
 ) {
   $inspect  : $span;
-  $span     : map.merge((spread: wide), parse-span($span));
+  $span     : map-merge((spread: wide), parse-span($span));
   $flow     : susy-get(flow, $span);
   $split    : if(susy-get(gutter-position, $span) == split, true, false);
   $width    : if($split, span($span) + gutter($span), span($span));
@@ -57,7 +55,7 @@
   $span
 ) {
   $inspect  : $span;
-  $span     : map.merge((spread: wide), parse-span($span));
+  $span     : map-merge((spread: wide), parse-span($span));
   $flow     : susy-get(flow, $span);
   $split    : if(susy-get(gutter-position, $span) == split, true, false);
   $width    : if($split, 0 - span($span) + gutter($span), 0 - span($span));
@@ -76,15 +74,15 @@
   $post: false
 ) {
   $inspect      : ($pre, $post);
-  $pre          : map.merge((spread: wide), parse-span($pre));
+  $pre          : map-merge((spread: wide), parse-span($pre));
 
   @if $post {
-    $post: map.merge((spread: wide), parse-span($post));
+    $post: map-merge((spread: wide), parse-span($post));
   } @else {
     $span: susy-get(span, $pre);
-    @if list.length($span) > 1 {
-      $pre: map.merge($pre, (span: list.nth($span, 1)));
-      $post: map.merge($pre, (span: list.nth($span, 2)));
+    @if length($span) > 1 {
+      $pre: map-merge($pre, (span: nth($span, 1)));
+      $post: map-merge($pre, (span: nth($span, 2)));
     } @else {
       $post: $pre;
     }
