--- a/sass/susy/language/susy/_settings.scss
+++ b/sass/susy/language/susy/_settings.scss
@@ -1,15 +1,9 @@
-@use "sass:list";
-@use "sass:map";
-@use "sass:meta";
-@use "sass:math";
-
 // Susy Settings
 // =============
 
 // Susy Language Defaults
 // ----------------------
 // - PRIVATE
-
 @include susy-defaults((
   container: auto,
   math: fluid,
@@ -55,21 +49,21 @@ $susy-keywords: (
 ) {
   $_return: ();
 
-  @if meta.type-of($short) == map {
+  @if type-of($short) == map {
     $_return: $short;
   } @else {
     @each $item in $short {
       // strings
-      @if meta.type-of($item) == string {
+      @if type-of($item) == string {
         @each $key, $value in $susy-keywords {
-          @if list.index($value, $item) {
-            $_key-value: list.append($key, $item);
+          @if index($value, $item) {
+            $_key-value: append($key, $item);
             $_return: _susy-deep-set($_return, $_key-value...);
           }
         }
       // maps
-      } @else if meta.type-of($item) == map {
-        $_return: map.merge($_return, $item);
+      } @else if type-of($item) == map {
+        $_return: map-merge($_return, $item);
       }
     }
   }
@@ -87,24 +81,24 @@ $susy-keywords: (
   $_columns: ();
   $_gutters: null;
 
-  @if not(math.is-unitless(list.nth(list.nth($short, 1), 1))) {
-    $_gutters: list.nth($short, 1);
+  @if not(unitless(nth(nth($short, 1), 1))) {
+    $_gutters: nth($short, 1);
   } @else {
-    $_columns: (columns: list.nth($short, 1));
-    $_gutters: if(list.length($short) > 1, list.nth($short, 2), $_gutters);
+    $_columns: (columns: nth($short, 1));
+    $_gutters: if(length($short) > 1, nth($short, 2), $_gutters);
   }
 
-  @if meta.type-of($_gutters) == list and list.length($_gutters) > 0 {
+  @if type-of($_gutters) == list and length($_gutters) > 0 {
     $_gutters: (
-      gutters: math.div(list.nth($_gutters, 2), list.nth($_gutters, 1)),
-      column-width: list.nth($_gutters, 1),
+      gutters: nth($_gutters, 2) / nth($_gutters, 1),
+      column-width: nth($_gutters, 1),
     );
   } @else {
     $_gutters: if($_gutters, (gutters: $_gutters), ());
   }
 
-  $_return: map.merge($_return, $_columns);
-  $_return: map.merge($_return, $_gutters);
+  $_return: map-merge($_return, $_columns);
+  $_return: map-merge($_return, $_gutters);
 
   @return $_return;
 }
@@ -118,24 +112,24 @@ $susy-keywords: (
   $_return: parse-settings($short);
   $_layout: ();
 
-  @if meta.type-of($short) == map {
+  @if type-of($short) == map {
     $_return: $short;
   } @else {
     @each $item in $short {
       // number or list
-      @if meta.type-of($item) == number or meta.type-of($item) == list {
-        @if meta.type-of($item) == list or math.is-unitless($item) {
-          $_layout: list.append($_layout, $item);
+      @if type-of($item) == number or type-of($item) == list {
+        @if type-of($item) == list or unitless($item) {
+          $_layout: append($_layout, $item);
         } @else {
-          $_return: map.merge($_return, (container: $item));
+          $_return: map-merge($_return, (container: $item));
         }
       }
     }
 
-    $_layout: if(list.length($_layout) > 0, parse-layout($_layout), $_layout);
+    $_layout: if(length($_layout) > 0, parse-layout($_layout), $_layout);
   }
 
-  @return map.merge($_return, $_layout);
+  @return map-merge($_return, $_layout);
 }
 
 
@@ -147,42 +141,42 @@ $susy-keywords: (
 ) {
   $_return: ();
 
-  @if meta.type-of($short) == map {
+  @if type-of($short) == map {
     $_return: $short;
   } @else {
-    $_at: list.index($short, at);
+    $_at: index($short, at);
 
     @if $_at {
       $_loci: $_at + 1;
-      $_location: list.nth($short, $_loci);
-      $_return: map.merge($_return, (location: $_location));
-      $short: list.set-nth($short, $_at, null);
-      $short: list.set-nth($short, $_loci, null);
+      $_location: nth($short, $_loci);
+      $_return: map-merge($_return, (location: $_location));
+      $short: set-nth($short, $_at, null);
+      $short: set-nth($short, $_loci, null);
     }
 
     $_i: 1;
     $_span: ();
 
-    @while $_i <= list.length($short) {
-      $_this: math.div($short, $_i);
+    @while $_i <= length($short) {
+      $_this: nth($short, $_i);
 
-      @if meta.type-of($_this) == number {
-        $_span: list.append($_span, $_this);
-        $short: list.set-nth($short, $_i, null);
+      @if type-of($_this) == number {
+        $_span: append($_span, $_this);
+        $short: set-nth($short, $_i, null);
       } @else if $_this == of {
-        $short: list.set-nth($short, $_i, null);
-        $_i: list.length($short) + 1;
+        $short: set-nth($short, $_i, null);
+        $_i: length($short) + 1;
       }
 
       $_i: $_i + 1;
     }
 
-    @if list.length($_span) > 0 {
-      $_span: if(list.length($_span) == 1, list.nth($_span, 1), $_span);
-      $_return: map.merge($_return, ($key: $_span));
+    @if length($_span) > 0 {
+      $_span: if(length($_span) == 1, nth($_span, 1), $_span);
+      $_return: map-merge($_return, ($key: $_span));
     }
 
-    $_return: map.merge($_return, parse-grid($short));
+    $_return: map-merge($_return, parse-grid($short));
   }
 
   @return $_return;
@@ -197,25 +191,25 @@ $susy-keywords: (
   $_gutters: parse-span($short, gutter-override);
   $_span: susy-get(gutter-override, $_gutters);
 
-  @if $_span and not(map.get($_gutters, columns)) {
+  @if $_span and not(map-get($_gutters, columns)) {
     $_context: ();
     $_new: ();
 
     @each $item in $_span {
-      @if meta.type-of($item) == number and math.is-unitless($item) {
-        $_context: list.append($_context, $item);
+      @if type-of($item) == number and unitless($item) {
+        $_context: append($_context, $item);
       } @else {
-        $_new: list.append($_new, $item);
+        $_new: append($_new, $item);
       }
     }
 
     $_context: parse-grid($_context);
-    $_new: if(list.length($_new) == 0, null, $_new);
-    $_new: if(list.length($_new) == 1, list.nth($_new, 1), $_new);
+    $_new: if(length($_new) == 0, null, $_new);
+    $_new: if(length($_new) == 1, nth($_new, 1), $_new);
     $_new: (gutter-override: if($_new != $_span, $_new, $_span));
 
-    $_gutters: map.merge($_gutters, $_new);
-    $_gutters: map.merge($_gutters, $_context);
+    $_gutters: map-merge($_gutters, $_new);
+    $_gutters: map-merge($_gutters, $_context);
   }
 
   @return $_gutters;
