Resolved depracations and warnings, added _susy-modern

--- a/sass/susy/language/susy/_gallery.scss
+++ b/sass/susy/language/susy/_gallery.scss
@@ -1,3 +1,4 @@
+@use "sass:math";
 // Gallery Syntax
 // ==============
 
@@ -21,7 +22,7 @@
 
   $inside       : is-inside($span);
   $from         : from($flow);
-  $line         : floor($context / $n);
+  $line         : floor(math.div($context, $n));
   $symmetrical  : is-symmetrical($columns);
 
   $output: (
