--- a/sass/susy/language/susy/_settings.scss
+++ b/sass/susy/language/susy/_settings.scss
@@ -1,3 +1,4 @@
+@use "sass:math";
 // Susy Settings
 // =============
 
@@ -90,7 +91,7 @@ $susy-keywords: (
 
   @if type-of($_gutters) == list and length($_gutters) > 0 {
     $_gutters: (
-      gutters: nth($_gutters, 2) / nth($_gutters, 1),
+      gutters: math.div(nth($_gutters, 2), nth($_gutters, 1)),
       column-width: nth($_gutters, 1),
     );
   } @else {
